@@ -1,12 +1,12 @@
 package com.unipi.ItineraJava.service;
 
-import com.unipi.ItineraJava.model.Place;
+import com.unipi.ItineraJava.model.MongoPlace;
 import com.unipi.ItineraJava.model.Review;
 import com.unipi.ItineraJava.repository.PlaceRepository;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
-import com.unipi.ItineraJava.repository.PlaceCustomRepositoryImpl;
 
+import java.util.Collections;
 import java.util.Comparator;
 import java.util.List;
 import java.util.stream.Collectors;
@@ -17,30 +17,35 @@ public class PlaceService {
     @Autowired
     private PlaceRepository placeRepository;
 
-    @Autowired
-    private PlaceCustomRepositoryImpl placeCustomRepository;
 
-    public List<Place> getBestPlacesByCity(String city) {
+    public List<MongoPlace> getBestPlacesByCity(String city) {
         return placeRepository.findByCityOrderByOverallRatingDesc(city);
     }
 
-    public List<Place> getPlacesByCityAndCategory(String city, String category) {
-        return placeRepository.findByCityAndCategoryOrdered(city, category);
+    public List<MongoPlace> getPlacesByCityAndCategory(String city, String category) {
+        return placeRepository.findByCityAndCategoryOrderByOverallRating(city, category);
     }
 
-    public List<Place> findPlacesByRating(String city, String category, double minRating) {
+    public List<MongoPlace> findPlacesByRating(String city, String category, double minRating) {
         // Recupera i luoghi in base alla città e alla categoria
-        List<Place> places = placeRepository.findByCityAndCategoryOrdered(city, category);
+        List<MongoPlace> mongoPlaces = placeRepository.findByCityAndCategoryOrderByOverallRating(city, category);
 
-        // Filtra in base al rateo medio
-        return places.stream()
-                .filter(place -> place.getAverageRating() >= minRating)
-                .collect(Collectors.toList());
+        // Controlla se la lista è null o vuota
+        if (mongoPlaces == null || mongoPlaces.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        // Filtra i luoghi basandoti sul rating medio calcolato
+        return mongoPlaces.stream()
+                .filter(place -> place.calculateAverageRating() >= minRating)
+                .toList();
     }
+
+
 
     public List<Review> getReviewsByCityCategoryAndName(String city, String category, String name) {
         try {
-            List<Review> reviews = placeCustomRepository.getReviewsByCityCategoryAndName(city, category, name);
+            List<Review> reviews = placeRepository.getReviewsByCityCategoryAndName(city, category, name);
             return reviews.stream()
                     .sorted(Comparator.comparingInt(Review::getStars).reversed())
                     .toList();
